[tool.poetry]
name = "montecarlo"
version = "0.1.0"
description = ""
authors = ["Alexander Kuebel <alexander.kuebel@code.berlin>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas-montecarlo = "^0.0.2"
matplotlib = "^3.4.2"
pandas-datareader = "^0.10.0"
ipykernel = "^6.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
